Fixed about alignment

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -60,8 +60,6 @@ p {
 
 .about-section {
      padding: 160px 0;
-     text-align: center;
-     padding: 0;
 }
 
 .about-section h1 {
@@ -109,10 +107,14 @@ line-height: 80px;
         font-size: 44px;
     }
     .hero {
-        padding: 50px 20px;
+        padding: 80px 20px;
 }
     .project-description {
         padding: 0;
         text-align: center;
+    }
+    .about-section {
+    text-align: center;
+     padding: 0;
     }
 }
